--- a/3.html
+++ b/3.html
@@ -1,2 +1,84 @@
-# Display the output
-print("New Html file")
+<!DOCTYPE html>
+<html>
+<head>
+<title> WEBPAGE DESIGN </title>
+<link rel="stylesheet" href="C:\Users\dell\Desktop\css\style.css"/>
+<h1><center><u>JOB APPLICATION FOR INTERNSHIP</u></center></h1>
+</head>
+<body>
+<h2><br>
+
+<div class='intro'>
+Respected madam ,
+<br>
+I miss Ekta kulkarni it is my pleasure to apply for the UXUI designer internship position 
+in your company I can confidently say based on my work experince in design application 
+and graphic design working under team projects and my excellent academic results in interaction design
+that I’d be a good fit for the position. 
+<br>
+As a Uxui designer, I have completed several courses that have helped me build my portfolio
+A few of the most beneficial ones have been User interface studies , HCI, graphic design theory as well as practical
+I have also gained valuable experience doing the application design , webiste design , poster design etc.
+I am excited for this internship to provide me with the necessary design skill 
+ and network that will help me grow professionally in my future career as a Uxui designer.
+ below i have attached my portfolio and some of the works .
+ <br>
+ <br>
+ </div>
+ <div class ="list">
+ <b style="color:red">Im well versed in the following software:</b>
+ <ul style="list-style-type: circle;">
+ <li>Figma</li><br>
+ <li>Adobe illustrator</li><br>
+ <li>Photoshop</li><br>
+ <li>Canva</li><br>
+ </ul>
+ </div>
+ <h2> 1.Portfolio</h2>
+ <p class="p1">Open the pdf<a href="file:///C:/Users/dell/Downloads/PORTFOLIO.pdf"> portfolio</a>
+ </p>
+ <br>
+ <br>
+ <h2 >2.Some of the works</h2>
+ <div class="work">
+
+<img src="C:\Users\dell\Desktop\Screenshot (301).png" height="200" width="200"> 
+<br>
+<img src="C:\Users\dell\Desktop\Screenshot (278).png" height="200" width="200">
+<br>
+<img src="C:\Users\dell\Desktop\Screenshot (45).png" height="200"  width="200">
+<br>
+<img src="C:\Users\dell\Desktop\Screenshot (318).png" height="200" width="200">
+<br>
+</div>
+<h2> 3.Business card </h2>
+<p>open the pdf <a href="file:///C:/Users/dell/Downloads/PERSONAL%20CARD.pdf"> Business card</a>
+</p>
+<br>
+<div class = "cd">
+<h2>Contact details </h2>
+<ul style="list-style-type: circle;">
+<li>Email-Ekdesign678@gmail.com</li><br>
+<li>Contact number- 9867534156</li><br>
+</ul>
+</div>
+<br>
+<br>
+<ul class="ul">
+   <li ><a href="#home" class= "active">Home</a></li>
+   <li><a href="#news"> News</a></li>
+   <li><a href="#contact"> Contact</a></li>
+   <li><a href="#about"> About</a></li>
+</ul>
+<br>
+<h2><u>THANK YOU</u></h2>
+</body>
+</html>
+
+
+
+
+
+
+ 
+ 
